frontend/src/components/markdown-text.module.css
.blockquote-style {
  & blockquote {
    padding: 0.3rem 0 0.3rem 0.6rem;
    border-left-style: solid;
    border-left-width: 3px;
    border-left-color: var(--mantine-color-gray-7);
    color: var(--mantine-color-gray-7);
    fill: var(--mantine-color-gray-7);
  }
}

.wrapper-style {
  overflow-x: auto;
  overflow-y: hidden;

  /* Workaround for the fact that numbered (aligned) KaTeX equations have a -2px
    margin that needs to be overridden until upstream is fixed:
    Tracking issue: https://github.com/KaTeX/KaTeX/issues/3254 */
  & :global(.katex .tag .vlist-t2) {
    margin-right: 0;
  }

  & p:first-child {
    margin-block-start: 0;
  }
  & p:last-child {
    margin-block-end: 0;
  }
  & img {
    max-width: 100%;
  }
  @media (max-width: 699px) {
    & p {
      margin-block-start: 0.5em;
      margin-block-end: 0.5em;
    }
  }
  & :global(.katex) {
    font-size: 1em;
  }
  /* Undo effect of .overlay class defined in the theme css */
  & .overlay {
    padding: unset;
  }
}

